EVA-8 feat: Se agrega clase 'needs-validation' y el atributo buleano novalidate con el fin de deshabilitar las tooltips que se ejecutan por defecto en el buscador. Adicionalmente se incluye la clase 'invalid-feedback' a cada campo del formulario con el fin de ejecutar la validación.

--- a/Proyectos/templates/Proyectos/Contrato/crear.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear.html
@@ -36,13 +36,13 @@
                                         </button>
                                     </div>
                                 {% endif %}
-                                <form action="{% url 'Proyectos:contratos-crear' %}" id="tercero" method="post">
+                                <form action="{% url 'Proyectos:contratos-crear' %}" id="tercero" method="post" class="needs-validation" novalidate>
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="form-row">
                                              <div class="col-md-6">
                                                 <label for="cliente_select">Cliente</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="cliente_select" name="cliente_id" required oninvalid="this.setCustomValidity('Por favor seleccione una opción de la lista')" oninput="this.setCustomValidity('')">
+                                                <select class="select2 form-control w-100 select2-selection--single" id="cliente_select" name="cliente_id"  required >
                                                     <option value="" >Seleccione un Cliente</option>
                                                     {% for tercero in terceros %}
                                                         {% if tercero.tipo_tercero.nombre.lower == 'cliente' %}
@@ -50,85 +50,127 @@
                                                         {% endif %}
                                                     {% endfor %}
                                                 </select>
+                                             <div class="invalid-feedback">
+                                                  Por favor seleccione un cliente.
+                                                </div>
                                               </div>
                                             <div class="col-md-6">
                                                 <label for="contrato_numero">Número de contrato</label>
-                                                <input class="form-control" id="contrato_numero" type="text" name="numero_contrato" oninvalid="this.setCustomValidity('Por favor ingrese un número de contrato')" oninput="setCustomValidity('')" placeholder="Ingrese el número del contrato" required maxlength="20" value="{{ contrato.numero_contrato }}">
+                                                <input class="form-control" id="contrato_numero" type="text" name="numero_contrato"  placeholder="Ingrese el número del contrato" required maxlength="20" value="{{ contrato.numero_contrato }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el número de contrato.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="rango_anho_select">Año</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" type="number" id="rango_anho_select" name="rango_anho" required oninvalid="this.setCustomValidity('Por favor seleccione una opción de la lista')" oninput="setCustomValidity('')">
+                                                <select class="select2 form-control w-100 select2-selection--single" type="number" id="rango_anho_select" name="rango_anho" required >
                                                     <option value="" >Seleccione un año</option>
                                                     {% for anho in rango_anho %}
                                                         <option value="{{ anho }}" {% if anho == contrato.anho %}selected{% endif %}>{{ anho }}</option>
                                                     {% endfor %}
                                                 </select>
+                                            <div class="invalid-feedback">
+                                                  Por favor seleccione un año.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                  <br>
                                                 <label for="contrato_supervisor_nombre">Nombre del supervisor</label>
-                                                <input class="form-control" id="contrato_supervisor_nombre" type="text" oninvalid="this.setCustomValidity('Por favor digite el nombre del supervisor')" oninput="setCustomValidity('')" name="supervisor_nombre" placeholder="Ingrese el nombre del supervisor" required maxlength="100" value="{{ contrato.supervisor_nombre }}">
+                                                <input class="form-control" id="contrato_supervisor_nombre" type="text"  name="supervisor_nombre" placeholder="Ingrese el nombre del supervisor" required maxlength="100" value="{{ contrato.supervisor_nombre }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el nombre del supervisor.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="contrato_telefono_supervisor">Teléfono del supervisor</label>
-                                                <input class="form-control" id="contrato_telefono_supervisor" type="text" oninvalid="this.setCustomValidity('Por favor digite el número telefónico')" oninput="setCustomValidity('')" name="supervisor_telefono" placeholder="Ingrese el número telefónico del supervisor" required maxlength="20" value="{{ contrato.supervisor_telefono }}">
+                                                <input class="form-control" id="contrato_telefono_supervisor" type="text"  name="supervisor_telefono" placeholder="Ingrese el número telefónico del supervisor" required maxlength="20" value="{{ contrato.supervisor_telefono }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el número telefónico.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="contrato_correo_supervisor">Correo electrónico del supervisor</label>
-                                                <input class="form-control" id="contrato_correo_supervisor" type="email" name="supervisor_correo" oninvalid="this.setCustomValidity('Por favor digite el correo electrónico')" oninput="setCustomValidity('')" placeholder="Ingrese el correo electrónico del supervisor" maxlength="100" value="{{ contrato.supervisor_correo }}">
+                                                <input class="form-control" id="contrato_correo_supervisor" type="email" name="supervisor_correo" placeholder="Ingrese el correo electrónico del supervisor" required maxlength="100" value="{{ contrato.supervisor_correo }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el correo electrónico.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                  <br>
                                                 <label for="contrato_residente">Nombre del residente</label>
-                                                <input class="form-control" id="contrato_residente" type="text" oninvalid="this.setCustomValidity('Por favor digite el nombre')" oninput="setCustomValidity('')" name="residente" placeholder="Ingrese el nombre del residente" required maxlength="100" value="{{ contrato.residente }}">
+                                                <input class="form-control" id="contrato_residente" type="text"  name="residente" placeholder="Ingrese el nombre del residente" required maxlength="100" value="{{ contrato.residente }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el nombre del residente.
+                                                </div>
                                             </div>
                                              <div class="col-md-6">
                                                  <br>
                                                 <label for="fecha_inicio">Fecha de inicio</label>
-                                                <input class="form-control" id="fecha_inicio" name="fecha_inicio" oninvalid="this.setCustomValidity('Por favor seleccione una fecha')" oninput="setCustomValidity('')" placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_inicio }}" required>
+                                                <input class="form-control" id="fecha_inicio" name="fecha_inicio"  placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_inicio }}" required>
+                                                 <div class="invalid-feedback">
+                                                  Por favor seleccione una fecha.
+                                                </div>
                                             </div>
                                              <div class="col-md-6">
                                                  <br>
                                                 <label for="fecha_terminacion">Fecha de terminación</label>
-                                                <input class="form-control" id="fecha_terminacion" name="fecha_terminacion" oninvalid="this.setCustomValidity('Por favor seleccione una fecha')" oninput="setCustomValidity('')" placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_terminacion  }}" required>
+                                                <input class="form-control" id="fecha_terminacion" name="fecha_terminacion"  placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_terminacion  }}" required>
+                                                 <div class="invalid-feedback">
+                                                  Por favor seleccione una fecha.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="contrato_valor">Valor</label>
-                                                <input class="form-control" id="contrato_valor" oninvalid="this.setCustomValidity('Por favor digite  un valor válido')" oninput="setCustomValidity('')" type="number" min="0" max="999999999999" name="valor" placeholder="Ingrese el valor del contrato" required  value="{{ contrato.valor }}">
+                                                <input class="form-control" id="contrato_valor"  onInput="checkLength(11,this)" type="number" min="0" max="9999999999" name="valor" placeholder="Ingrese el valor del contrato" required  value="{{ contrato.valor }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite un valor.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
-                                                <label for="contrato_periocidad_informes">Periocidad de informes</label>
-                                                <input class="form-control" id="contrato_periocidad_informes" type="number" min="0" max="100" oninvalid="this.setCustomValidity('Por favor digite  un valor válido')" oninput="setCustomValidity('')" name="periocidad_informes" placeholder="Ingrese la periocidad de los informes" required  value="{{ contrato.periocidad_informes }}">
+                                                <label for="contrato_periocidad_informes">Periodicidad de informes</label>
+                                                <input class="form-control" id="contrato_periocidad_informes" type="number" min="0" max="1000"  onInput="checkLength(3,this)" name="periocidad_informes" placeholder="Ingrese la periocidad de los informes" required  value="{{ contrato.periocidad_informes }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite un valor.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="contrato_tiempo">Tiempo</label>
-                                                <input class="form-control" id="contrato_tiempo" type="number" name="tiempo" oninvalid="this.setCustomValidity('Por favor digite  un valor válido')" oninput="setCustomValidity('')" min="0" max="100" placeholder="Ingrese el tiempo" required  value="{{ contrato.tiempo }}">
+                                                <input class="form-control" id="contrato_tiempo" type="number" name="tiempo"  onInput="checkLength(3,this)" min="0" max="1000" placeholder="Ingrese el tiempo" required  value="{{ contrato.tiempo }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite un valor.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="tipo_contrato_select">Tipo de contrato</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" oninvalid="this.setCustomValidity('Por favor seleccione una opción de la lista')" oninput="setCustomValidity('')" id="tipo_contrato_select" name="tipo_contrato_id" required>
+                                                <select class="select2 form-control w-100 select2-selection--single"  id="tipo_contrato_select" name="tipo_contrato_id" required>
                                                     <option value="" >Seleccione un Tipo de Contrato</option>
                                                     {% for tipo_contrato in tipo_contratos %}
                                                         <option value="{{ tipo_contrato.id }}" {% if tipo_contrato.id == contrato.tipo_contrato_id %} selected {% endif %}>{{ tipo_contrato.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                            <div class="invalid-feedback">
+                                                  Por favor seleccione un tipo de contrato.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="empresa_select">Empresa</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" oninvalid="this.setCustomValidity('Por favor seleccione una opción de la lista')" oninput="setCustomValidity('')" id="empresa_select" name="empresa_id"  required>
+                                                <select class="select2 form-control w-100 select2-selection--single"  id="empresa_select" name="empresa_id"  required>
                                                     <option value="" >Seleccione una Empresa</option>
                                                     {% for empresa in empresas %}
                                                         <option value="{{ empresa.id }}" {% if empresa.id == contrato.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione una empresa.
+                                                </div>
                                             </div>
 
                                         </div>
@@ -157,13 +199,14 @@
 
 <script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
-<script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/vendors.bundle.js'%}"></script>
 <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
 <script src="{% static 'Proyectos/js/Contratos/date_picker.js' %}"></script>
+<script src="{% static 'Proyectos/js/Contratos/longitud_caracter.js' %}"></script>
+<script src="{% static 'Proyectos/js/Contratos/validar_campos.js' %}"></script>
     <script>
 		$(document).ready(function () {
 			$(function() {
