--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -47,7 +47,7 @@
                                                             <th>Fecha de inicio</th>
                                                             <th>Fecha de terminación</th>
                                                             <th>Valor</th>
-                                                            <th>Periocidad de informes</th>
+                                                            <th>Periodicidad de informes</th>
                                                             <th>Tiempo</th>
                                                             <th>Tipo de contrato</th>
                                                             <th>Empresa</th>
@@ -113,7 +113,7 @@
         <script>
             $(document).ready(function()
             {
-                 let columnasExportar = [0, 1, 2,3, 4, 5, 6, 7, 8];
+                 let columnasExportar = [0, 1,3, 4, 6, 9, 12, 13];
 
                 // initialize datatable
                 $('#dataTable').dataTable(
@@ -169,7 +169,7 @@
                             text: 'Excel',
                             className: 'btn-outline-success btn-sm mr-1',
                             exportOptions: {
-                            columns: columnasExportar,
+                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
 
                           },
                         },
@@ -188,7 +188,7 @@
                             text: 'Copiar',
                             className: 'btn-outline-primary btn-sm mr-1',
                             exportOptions: {
-                            columns: columnasExportar,
+                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
                           },
                         },
                         {
@@ -196,7 +196,7 @@
                             text: 'Imprimir',
                             className: 'btn-outline-primary btn-sm',
                             exportOptions: {
-                            columns: columnasExportar,
+                            columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
                           },
                         }
                     ],
