EVA-8 refactor: Se redireccionan librerías.

--- a/Proyectos/templates/Proyectos/Contrato/editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/editar.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
-    <link rel="stylesheet"  href="{% static 'Proyectos/css/Contratos/background.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/validaciones/background.css' %}">
+
 {% endblock %}
 
 {% block main %}
@@ -208,8 +209,7 @@
 <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
 <script src="{% static 'Proyectos/js/Contratos/date_picker.js' %}"></script>
 <script src="{% static 'Proyectos/js/Contratos/longitud_caracter.js' %}"></script>
-<script src="{% static 'Proyectos/js/Contratos/validar_campos.js' %}"></script>
-
+<script src="{% static 'EVA/Plantilla/js/validaciones/validar_campos.js' %}"></script>
 
 
     <script>
