EVA-8 refactor: Se remueve hora y minutos del formato de las fechas de inicio y de terminación ya que estos no lo requieren.

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -64,8 +64,8 @@
                                                                 <td>{{ contrato.supervisor_telefono }}</td>
                                                                 <td>{{ contrato.supervisor_correo }}</td>
                                                                 <td>{{ contrato.residente }}</td>
-                                                                <td>{{ contrato.fecha_inicio|date:'Y-m-d H:i' }}</td>
-                                                                <td>{{ contrato.fecha_terminacion|date:'Y-m-d H:i' }}</td>
+                                                                <td>{{ contrato.fecha_inicio|date:'Y-m-d' }}</td>
+                                                                <td>{{ contrato.fecha_terminacion|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.valor }}</td>
                                                                 <td>{{ contrato.periocidad_informes }}</td>
                                                                 <td>{{ contrato.tiempo }}</td>
