--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/validaciones/background.css' %}">
 {% endblock %}
 {% block main %}
 
@@ -37,17 +38,23 @@
                                         </button>
                                     </div>
                                 {% endif %}
-                                <form action="{% url 'Administracion:terceros-crear' %}" id="tercero" method="post">
+                                <form action="{% url 'Administracion:terceros-crear' %}" id="tercero" method="post" class="needs-validation" novalidate>
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="form-row">
                                             <div class="col-md-6">
                                                 <label for="tercero_name">Nombre</label>
                                                 <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite un nombre.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="tercero_identificacion">Identificación</label>
                                                 <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese número de identificación" required maxlength="20" value="{{ tercero.identificacion }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite la identificación.
+                                                </div>
                                              </div>
                                              <div class="col-md-6">
                                              <br>
@@ -58,6 +65,9 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un tipo de identificación.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                              <br>
@@ -68,6 +78,9 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione una empresa.
+                                                </div>
                                             </div>
 
                                             <div class="col-md-6">
@@ -79,6 +92,9 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un tipo de tercero.
+                                                </div>
                                             </div>
 
                                             <div class="col-md-6">
@@ -90,6 +106,9 @@
                                                         <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un departamento.
+                                                </div>
                                             </div>
 
                                             <div class="col-md-6">
@@ -101,6 +120,9 @@
                                                         <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un municipio.
+                                                </div>
                                             </div>
 
                                             <div class="col-md-6">
@@ -113,6 +135,9 @@
                                                     {% endfor %}
 
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un centro poblado.
+                                                </div>
                                             </div>
 
                                         </div>
@@ -147,6 +172,7 @@
 <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/validaciones/validar_campos.js' %}"></script>
     <script>
 		$(document).ready(function () {
 			$(function() {
