--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -7,6 +7,7 @@
 	<!-- page related CSS below -->
 	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/validaciones/background.css' %}">
 {% endblock %}
 {% block main %}
 <div class="panel-container show">
@@ -27,17 +28,23 @@
                         <div class="panel-group">
                             <div class="panel-body">
 
-                                <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" >
+                                <form action="{% url 'Administracion:terceros-editar' tercero.id %}" id="tercero-form" method="post" class="needs-validation" novalidate>
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <div class="form-row">
                                             <div class="col-md-6">
                                                 <label for="empleado_name">Nombre</label>
                                                 <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite el nombre.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="empleado_last_name">Identificación</label>
                                                 <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese el número de identificación" required maxlength="15" value="{{ tercero.identificacion }}">
+                                                <div class="invalid-feedback">
+                                                  Por favor digite la identificación.
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -51,6 +58,9 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un tipo de identificación.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="empresa_select">Empresa</label>
@@ -60,6 +70,9 @@
                                                         <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione una empresa.
+                                                </div>
                                             </div>
 
                                         </div>
@@ -74,6 +87,9 @@
                                                         <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un tipo de tercero.
+                                                </div>
                                             </div>
                                              <div class="col-md-6">
                                                 <label for="departamento_select">Departamento</label>
@@ -83,6 +99,9 @@
                                                         <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un departamento.
+                                                </div>
                                             </div>
                                     </div>
                                     <div class="form-group">
@@ -95,6 +114,9 @@
                                                         <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un municipio.
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
@@ -104,6 +126,9 @@
                                                         <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
+                                                <div class="invalid-feedback">
+                                                  Por favor seleccione un centro poblado.
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -112,7 +137,7 @@
                                             <div class="col-md-6">
                                                 <div class="custom-control custom-switch">
                                                     <div class="custom-control custom-checkbox">
-                                                    <input type="checkbox" class="custom-control-input" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
+                                                    <input type="checkbox" class="custom-control-input form-control" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
                                                     <label class="custom-control-label" for="defaultChecked">Estado</label>
                                                     </div>
                                                 </div>
@@ -142,6 +167,7 @@
 {% block scripts %}
 
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/validaciones/validar_campos.js' %}"></script>
 	<script>
 		$(document).ready(function () {
 			$(function() {
