--- a/EVA/static/EVA/Plantilla/css/miscellaneous/lightgallery/lightgallery.bundle-rtl.css
+++ b/EVA/static/EVA/Plantilla/css/miscellaneous/lightgallery/lightgallery.bundle-rtl.css
@@ -296,8 +296,8 @@ aside.page-sidebar ($nav-width, $nav-background)
 /* SHORTCUT BUTTON (appears on bottom right of the page) */
 @font-face {
   font-family: 'lg';
-  src: url("./fonts/lg.eot?n1z373");
-  src: url("./fonts/lg.eot?#iefixn1z373") format("embedded-opentype"), url("./fonts/lg.woff?n1z373") format("woff"), url("./fonts/lg.ttf?n1z373") format("truetype"), url("./fonts/lg.svg?n1z373#lg") format("svg");
+  src: url("../../../fonts/lg.eot?n1z373");
+  src: url("../../../fonts/lg.eot?#iefixn1z373") format("embedded-opentype"), url("../../../fonts/lg.woff?n1z373") format("woff"), url("../../../fonts/lg.ttf?n1z373") format("truetype"), url("../../../fonts/lg.svg?n1z373#lg") format("svg");
   font-weight: normal;
   font-style: normal; }
 
