EVA-11 fix: Se remueve parámetro checked ya que al editar un tercero cuyo estado inicial era inactivo se visualizaba como activo en la opción editar.

--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -138,7 +138,7 @@
                                             <div class="col-md-6">
                                                 <div class="custom-control custom-switch">
                                                     <div class="custom-control custom-checkbox">
-                                                    <input type="checkbox" class="custom-control-input form-control" id="defaultChecked" name="estado" checked="" value="True" {% if tercero.estado %}checked{% endif %}>
+                                                    <input type="checkbox" class="custom-control-input form-control" id="defaultChecked" name="estado"  value="True" {% if tercero.estado %}checked{% endif %}>
                                                     <label class="custom-control-label" for="defaultChecked">Estado</label>
                                                     </div>
                                                 </div>
