--- a/Proyectos/templates/Proyectos/Contrato/editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/editar.html
@@ -134,8 +134,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <br>
-                                                <label for="contrato_periocidad_informes">Periodicidad de informes</label>
-                                                <input class="form-control" id="contrato_periocidad_informes" type="number" min="0" max="1000"  onInput="checkLength(3,this)" name="periocidad_informes" required placeholder="Ingrese la periodicidad de los informes"  value="{{ contrato.periocidad_informes }}">
+                                                <label for="contrato_periodicidad_informes">Periodicidad de informes</label>
+                                                <input class="form-control" id="contrato_periodicidad_informes" type="number" min="0" max="1000"  onInput="checkLength(3,this)" name="periodicidad_informes" required placeholder="Ingrese la periodicidad de los informes"  value="{{ contrato.periodicidad_informes }}">
                                                 <div class="invalid-feedback">
                                                   Por favor digite un valor.
                                                 </div>
