EVA-8 refactor: Se corrige el nombre del campo periodicidad_informe.

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -67,7 +67,7 @@
                                                                 <td>{{ contrato.fecha_inicio|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.fecha_terminacion|date:'Y-m-d' }}</td>
                                                                 <td>{{ contrato.valor }}</td>
-                                                                <td>{{ contrato.periocidad_informes }}</td>
+                                                                <td>{{ contrato.periodicidad_informes }}</td>
                                                                 <td>{{ contrato.tiempo }}</td>
                                                                 <td>{{ contrato.tipo_contrato }}</td>
                                                                 <td>{{ contrato.empresa }}</td>
